# CONFLUENCE

./: .confluence_env  .gitignore  .readthedocs.yaml  .readthedocs.yml  .run_CONFLUENCE_batch.sh.swp  CHANGELOG.md  CONFLUENCE.py  CONFLUENCE_single_34374830.err  CONFLUENCE_single_34374961.err  CONFLUENCE_single_34374974.err  CONFLUENCE_single_34374998.err  CONFLUENCE_single_34376442.err  CONFLUENCE_single_34376911.err  CONTRIBUTING.md  INSTALL.md  README.md  __init__.py  __main__.py  compare_optimisers.py  config_New_Zealand.yaml  config_active.yaml  confluence  confluence.bat  confluence_version.py  core.2074  directoryTree.txt  environment.yaml  gmon.out  mpi_tasks_254deb8f.pkl  mpi_tasks_5656c2dd.pkl  mpi_tasks_fa6a0972.pkl  mpi_worker_254deb8f.py  mpi_worker_8799efd5.py  package-lock.json  pyproject.toml  report.log.1  report.log.2  report.log.3  report.log.4  report.log.5  (+11 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  install-validate.yml  release.yml
0_base_settings/: README.md  daac_mcd12q1_data_links.txt
0_base_settings/FUSE/: README.md  fm_catch.txt  fuse_zNumerix.txt
0_base_settings/SUMMA/: basinParamInfo.txt  localParamInfo.txt  modelDecisions.txt  outputControl.txt
0_base_settings/SUMMA_point/: TBL_SOILPARM.TBL  TBL_VEGPARM.TBL  modelDecisions.txt  modelDecisions_exp320.txt  outputControl_IC.txt  outputControl_everything.txt
0_config_files/: README.md  config_Africa.yaml  config_Alakahi.yaml  config_Alalaulani.yaml  config_Antarctic.py  config_Antarctic.yaml  config_Bow.yaml  config_Bow_at_Banff.yaml  config_Bow_dev.yaml  config_Bow_lumped.yaml  config_Bow_lumped.yaml.backup  config_Bow_lumped_.yaml  config_Bow_lumped_casr.yaml  config_Bow_lumped_casr_em_earth.yaml  config_Bow_lumped_elevation.yaml  config_Bow_lumped_em_earth.yaml  config_Bow_lumped_em_earth_dist_miz.yaml  config_Bow_lumped_em_earth_elevation.yaml  config_Bow_lumped_era5.yaml  config_Bow_lumped_land.yaml  config_Bow_lumped_rdrs.yaml  config_Bow_lumped_rdrs_em_earth.yaml  config_Bow_semi_distributed.yaml  config_CA-NS7.yaml  config_CA-SCB.yaml  config_CA-TP1.yaml  config_CAN_01DG003.yaml  config_CAN_03QC002.yaml  config_CAN_05LL014.yaml  config_CAN_05TG002.yaml  config_CAN_09CB001.yaml  config_Canada.yaml  config_Chena.yaml  config_Clear_Creek.yaml  config_Congo_at_Matadi.yaml  config_Copper.yaml  config_Dalsa.yaml  config_East_River.yaml  config_Eurasia.yaml  config_FLUXNET.yaml  (+112 more)
0_config_files/FLUXNET/: config_AR-SLu.yaml  config_AR-Vir.yaml  config_AT-Neu.yaml  config_AU-ASM.yaml  config_AU-Ade.yaml  config_AU-Cpr.yaml  config_AU-Cum.yaml  config_AU-DaP.yaml  config_AU-DaS.yaml  config_AU-Dry.yaml  config_AU-Emr.yaml  config_AU-Fog.yaml  config_AU-GWW.yaml  config_AU-Gin.yaml  config_AU-How.yaml  config_AU-Lox.yaml  config_AU-RDF.yaml  config_AU-Rig.yaml  config_AU-Rob.yaml  config_AU-Stp.yaml  config_AU-TTE.yaml  config_AU-Tum.yaml  config_AU-Wac.yaml  config_AU-Whr.yaml  config_AU-Wom.yaml  config_AU-Ync.yaml  config_BE-Bra.yaml  config_BE-Lon.yaml  config_BE-Vie.yaml  config_BR-Npw.yaml  config_BR-Sa1.yaml  config_BR-Sa3.yaml  config_BW-Gum.yaml  config_BW-Nxr.yaml  config_CA-Gro.yaml  config_CA-Man.yaml  config_CA-NS1.yaml  config_CA-NS2.yaml  config_CA-NS3.yaml  config_CA-NS4.yaml  (+227 more)
0_config_files/camels/: config_CAN_01AF007.yaml  config_CAN_01AJ004.yaml  config_CAN_01AK001.yaml  config_CAN_01AM001.yaml  config_CAN_01AP002.yaml  config_CAN_01AQ001.yaml  config_CAN_01BJ003.yaml  config_CAN_01BL003.yaml  config_CAN_01BQ001.yaml  config_CAN_01BU002.yaml  config_CAN_01EC001.yaml  config_CAN_01ED005.yaml  config_CAN_01ED007.yaml  (+87 more)
docs/: CNAME  QUICKSTART.md  index.html  requirements.txt
examples/: 01_lumped_basin_workflow.ipynb  01_point_scale.ipynb  01a_point_scale_snotel.ipynb  01b_point_scale_fluxnet.ipynb  02_lumped_basin.ipynb  02_semi_distributed_basin_workflow.ipynb  02a_basin_lumped.ipynb  02b_basin_semi_distributed.ipynb  02c_basin_distributed.ipynb  03_distributed_basin_workflow.ipynb  03_semi_distributed_basin.ipynb  03a_domain_regional.ipynb  03b_domain_continental.ipynb  04_distributed_basin.ipynb  04_regional_domain_workflow.ipynb  04a_large_sample_fluxnet.ipynb  04b_large_sample_fluxnet.ipynb  04b_large_sample_norswe.ipynb  04c_large_sample_camelsspat.ipynb  04c_large_sample_caravan.ipynb  04d_large_sample_camelsspat.ipynb  04d_large_sample_caravan.ipynb  04e_large_sample_lamahice  04h_large_sample_ismn.ipynb  05_continental_North_America_workflow.ipynb  05_regional_domain.ipynb  06_continental.ipynb  06_continental_domain.ipynb  07_large_sample_caravan.ipynb  09_large_sample_norswe.ipynb  10_large_sample_camelsspat.ipynb  README.md  Untitled.ipynb  bow_distributed_config.yaml  bow_elevation_config.yaml  camels-spat-metadata.csv  hawaiian_islands_stations.csv  norswe_stations.csv  point_scale_config.yaml  run_fluxnet.py  (+10 more)
jupyter notebooks/: 0_initializeProject.ipynb  1_defineSpatialDomain.ipynb  2_discretiseDomain.ipynb  3a_preProcessInputData_modelAgnostic.ipynb  3b_preProcessInputData_modelSpecific.ipynb  5_parameterEstimation.ipynb
results_differentiable_Bow_at_Banff_lumped_em_earth_20250909_0309/: emulator_model.pt  optimization_metadata.json  optimized_parameters.json
results_differentiable_Bow_at_Banff_lumped_em_earth_20250910_0340/: emulator_model.pt  optimization_metadata.json  optimized_parameters.json
tests/: test_smoke.py
utils/: README.md  Untitled-1.sh  calibration_utils.py  config_utils.py  data_utils.py  discretization_utils.py  evaluation_utils.py  forcasting_utils.py  geofabric_utils.py  logging_utils.py  mizuroute_utils.py  model_utils.py  opt_model_utils.py  optimisation_algorithms.py  optimisation_utils.py  optimization_config.py  optimization_utils.py  ostrich_util.py  parallel_parameter_estimation.py  parallel_utils.py  reporting_utils.py  results_utils.py  run_trial.py  run_trial.sh  summa_spatial_utils.py  summa_utils.py  summaflow_spatial.py  uncertainty_utils.py  workflow_utils.py
(+2746 files in other folders)
