[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "symfluence"
version = "0.5.0"         # <- static to avoid plugin issues
description = "SYnergistic Modelling Framework for Linking and Unifying Earth-system Nexii for Computational Exploration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "SYMFLUENCE Team", email = "dev@symfluence.org" }]

# Start with an empty list to unblock; we’ll fill runtime deps later.
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "xarray",
  "pint_xarray",
  "distributed",
  "pyviscous",
  "torch",
  "scikit-learn",
  "pyswarms",
  "geopandas",
  "rasterio",
  "pyproj",
  "shapely",
  "fiona",
  "easymore",
  "rasterstats",
  "pvlib",
  "cdo",
  "seaborn",
  "plotly",
  "findlibs",
  "netCDF4",
  "hydrobm",
  "baseflow",
  "matplotlib",
  "SALib",
  "psutil",
  "alive-progress",
  "tqdm",
  "contextily",
  "pyyaml",
  "requests",
  "cdsapi",
  "hs_restclient",
  "numexpr",
  "cftime",
  "pytest", 
  "sphinx", 
  "jupyterlab", 
  "ipykernel"
]

[project.scripts]
# thin wrapper that delegates to your existing CLI
symfluence = "symfluence.cli:main"

[project.urls]
Homepage = "https://symfluence.org"
Source = "https://github.com/DarriEy/SYMFLUENCE"
Issues = "https://github.com/DarriEy/SYMFLUENCE/issues"
Documentation = "https://symfluence.org/"

[tool.hatch.build.targets.wheel]
# ship both the wrapper and your existing utils package (no moves)
packages = ["src/symfluence", "utils"]

[tool.hatch.build.targets.sdist]
include = [
  "src/symfluence",
  "utils",
  "README.md",
  "LICENSE",
  "MANIFEST.in",
  "requirements.txt",
  "symfluence_version.py" 
]

[tool.hatch.build.targets.wheel.force-include]
"symfluence_version.py" = "symfluence_version.py"